avformat: fix atomatic format selection for (s)segment

Fixes Ticket2236

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>